@@ -24,6 +24,9 @@
 2009-09-11  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> utilities/tests/msl_composite.sh: Use a draw command file for
+        this test script too.
+
   <LI> utilities/tests/{black-threshold.sh,draw.sh,recolor.sh,
         white-threshold.sh}: MSYS is sometimes wreaking havoc on arguments
         with spaces in them so use work-arounds.
